Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-10706

Mac OS X: When clicking on a submenu entry then it should not close the menu

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.8.x
    • 4.6.2, 4.7.1
    • None
    • Mac OS X 10.5: Cocoa
    • macOS
    • d9de8ad5ddbdd86de463b5aa82e03a450762b816

      When clicking on a submenu entry then it should only close the menu on the second click, not on the first one. In the menus example if you open the edit menu and click on the format submenu when the menu is open then it should stay until the second click. This is how native applications behave on Mac OS X.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            andysh Andy Shaw
            anshaw Andy Shaw (closed Nokia identity) (Inactive)
            Votes:
            4 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes