When clicking on a menu item which has a sub menu it should not close

If you clicked on a menu with a submenu then it should do nothing as
this is what the native behaviour is on Mac.

Task-number: QTBUG-10706
Change-Id: I7c8898b4b35a8189e1a8270d8a528eb56c81aed7
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@digia.com>